--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,14 @@ dependencies = [
     "giturlparse>=0.12.0",
     "gitpython>=3.1.45",
 ]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Operating System :: MacOS",
+    "Operating System :: Microsoft :: Windows",
+]
 
 [project.scripts]
 tenrec = "tenrec.__main__:main"
