--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-testpaths = tests
+testpaths = tenrec/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
