--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "hatchling.build"
 
 [project]
 name = "tenrec"
-version = "0.1.2"
+version = "0.1.3"
 description = "A modern MCP server implementation for IDA Pro using ida-domain and FastMCP."
 readme = "README.md"
-license = {text = "GPL-3.0"}
+license = {text = "MIT"}
 authors = [{name = "Axel Mierczuk"}]
 requires-python = ">=3.10"
 dependencies = [
