Plugin management improvements

--- a/examples/plugin_a/pyproject.toml
+++ b/examples/plugin_a/pyproject.toml
@@ -16,3 +16,7 @@ dependencies = [
 
 [tool.uv.sources]
 tenrec = { path = "../../", editable = true }
+
+[project.entry-points."tenrec.plugins"]
+plugin_a = "main:SamplePluginA"
+plugin_b = "main:SamplePluginB"
