--- a/examples/plugin_a/pyproject.toml
+++ b/examples/plugin_a/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling>=1.27"]
+build-backend = "hatchling.build"
 
 [project]
 name = "PluginA"
@@ -14,8 +14,11 @@ dependencies = [
     "tenrec",
 ]
 
-[tool.uv.sources]
-tenrec = { path = "../../", editable = true }
+[tool.uv]
+package = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["plugin"]
 
 [project.entry-points."tenrec.plugins"]
 plugin_a = "main:SamplePluginA"
