--- a/examples/plugin_a/pyproject.toml
+++ b/examples/plugin_a/pyproject.toml
@@ -21,5 +21,5 @@ package = true
 packages = ["plugin"]
 
 [project.entry-points."tenrec.plugins"]
-plugin_a = "main:SamplePluginA"
-plugin_b = "main:SamplePluginB"
+plugin_a = "plugin.main:SamplePluginA"
+plugin_b = "plugin.main:SamplePluginB"
