--- a/examples/pyproject.toml
+++ b/examples/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.27"]
 build-backend = "hatchling.build"
 
 [project]
-name = "Example Plugins"
+name = "example_plugin"
 version = "1.0.0"
 description = "A sample plugin for the Tenrec framework."
 readme = "README.md"
