Avoid cdifflib installation on windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ license = {text = "MIT"}
 authors = [{name = "Axel Mierczuk"}]
 requires-python = ">=3.10"
 dependencies = [
-    "cdifflib==1.2.9",
+    "cdifflib==1.2.9; sys_platform != 'win32'", # Optional dependency for better diffing with IDA
     "fastmcp>=2.12.3",
     "gunicorn>=23.0.0",
     "ida-domain==0.2.0",
